<resources>
    <string name="app_name">Stream</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_name">Timur K.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Sign In</string>
    <string name="email">Email</string>
    <string name="sign_up">Register</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Sign In</string>
    <string name="username">Username</string>
    <string name="login_with_one_of_the_following_options">Sign in with one of the following options</string>
    <string name="placeholder_description">When a sadistic serial killer begins murdering key political figures in Gotham, Batman is forced to investigate the city\'s hidden corruption and question his family\'s involvement.</string>
    <string name="intro_text">Discover Your\n Favourite Movies and TvShows Here</string>
    <string name="intro_subtext">Explore all the most exciting\n movies and tv shows based on your interests</string>
    <string name="title">Notice!!</string>
    <string name="supporting_text">Stream Movie On Browser?</string>
    <string name="decline">No</string>
    <string name="accept">Yes</string>
    <string name="nullContent">No content to display</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="sign_out_supporting_text">Do you want to sign out from Stream?</string>
    <string-array name="upcoming_string_text">
        <item>"Movies"</item>
        <item>"Tv Shows"</item>
    </string-array>
</resources>